--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hooks_riverpod: ^1.0.2
   flutter_hooks: ^0.18.1
   fluttertoast: ^8.0.8
+  built_collection: ^5.1.1
 
 
 dev_dependencies:
