--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   flutter_hooks: ^0.18.1
   fluttertoast: ^8.0.8
   built_collection: ^5.1.1
+  go_router: ^2.5.5
+  shared_preferences: ^2.0.11
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
+  cloud_firestore: ^3.1.5
 
 
 dev_dependencies:
